--- a/R/08-time_homogeneity.Rmd
+++ b/R/08-time_homogeneity.Rmd
@@ -58,6 +58,8 @@ time_inhomog_models <- readRDS(here("data", "time_inhomog_models.rds"))
 #| label: timeline-data
 #| echo: true
 
+state_order <- factor(c("M", "S", "D", "R"), ordered = TRUE)
+
 timeline_hosp_data <- pt_stg %>%
   dplyr::select(model, deid_enc_id, DaysSinceEntry, DaysSincePos, stage, state) %>%
   filter(model == "base_model") %>%
@@ -67,14 +69,16 @@ timeline_hosp_data <- pt_stg %>%
          n_severe = sum(ifelse(state_type == "Severe", 1, 0))) %>%
   ungroup() %>%
   arrange(desc(LOS), desc(n_severe)) %>%
-  mutate(deid_enc_id = factor(deid_enc_id, levels = unique(deid_enc_id)))
+  mutate(deid_enc_id = factor(deid_enc_id, levels = unique(deid_enc_id))) %>%
+  mutate(state = factor(state, levels = levels(state_order)))
 
 timeline_cal_data <- pt_stg %>%
   dplyr::select(model, deid_enc_id, date, CalendarTime, stage, state) %>%
   filter(model == "base_model") %>%
   mutate(state_type = ifelse(grepl("M", state), "Moderate", "Severe")) %>%
   arrange(date) %>%
-  mutate(deid_enc_id = factor(deid_enc_id, levels = unique(deid_enc_id)))
+  mutate(deid_enc_id = factor(deid_enc_id, levels = unique(deid_enc_id))) %>%
+  mutate(state = factor(state, levels = levels(state_order)))
 
 ```
 
@@ -91,13 +95,22 @@ timeline_pA <- ggplot(data = timeline_hosp_data,
         axis.title.y = element_blank(),
         panel.grid = element_blank(),
         legend.position = "bottom") +
-  scale_color_viridis_d() +
-  scale_fill_viridis_d() +
+  scale_color_viridis_d(breaks = state_order) +
+  scale_fill_viridis_d(breaks = state_order) +
   scale_x_continuous(name = "Days since hospital admission", 
                      breaks = seq(0, 60, by = 5),
                      limits = c(0, 30))
 
 # timeline_pA
+
+# order_temp <- timeline_hosp_data %>%
+#   group_by(deid_enc_id) %>%
+#   summarise(min_day = min(DaysSincePos)) %>%
+#   arrange(min_day) %>%
+#   mutate(deid_enc_id = factor(deid_enc_id, levels = unique(deid_enc_id)))
+# 
+# timeline_hosp_data <- timeline_hosp_data %>%
+#   mutate(deid_enc_id = factor(deid_enc_id, levels = levels(order_temp$deid_enc_id)))
 
 timeline_pB <- ggplot(data = timeline_hosp_data,
        aes(x = DaysSincePos, y = deid_enc_id, color = state, fill = state)) +
@@ -108,8 +121,8 @@ timeline_pB <- ggplot(data = timeline_hosp_data,
         axis.title.y = element_blank(),
         panel.grid = element_blank(),
         legend.position = "bottom") +
-  scale_color_viridis_d() +
-  scale_fill_viridis_d() +
+  scale_color_viridis_d(breaks = state_order) +
+  scale_fill_viridis_d(breaks = state_order) +
   scale_x_continuous(name = "Days since positive COVID test", 
                      breaks = seq(-10, 60, by = 5),
                      limits = c(NA, 30))
@@ -126,8 +139,8 @@ timeline_pC <- ggplot(data = timeline_cal_data,
         axis.title.x = element_blank(),
         panel.grid = element_blank(),
         legend.position = "bottom") +
-  scale_color_viridis_d() +
-  scale_fill_viridis_d() +
+  scale_color_viridis_d(breaks = state_order) +
+  scale_fill_viridis_d(breaks = state_order) +
   scale_x_date(date_labels = "%b %Y", date_breaks = "3 months")
 
 # timeline_pC
@@ -201,19 +214,19 @@ time_hrs <- rbind(
 time_hrs_plot <- ggplot(data = time_hrs, aes(x = covariate_value, y = hr, color = type, fill = type)) +
   geom_hline(yintercept = 1, linetype = "dashed") +
   geom_ribbon(aes(ymin = pmax(hr_lower, 0.1), 
-                  ymax = pmin(hr_upper, 200)), 
+                  ymax = pmin(hr_upper, 160)), 
               alpha = 0.2, color = NA) +
   geom_line(linewidth = 1)  +
   facet_grid(transition ~ variable, scales = "free",
              labeller = labeller(
-               spline_variable = c(
-               "DaysSinceEntry" = "Days Since Hospital Admission",
+               variable = c(
+               "DaysSinceEntry" = "Hospital Time",
                "CalendarTime" = "Calendar Time"
              ))) +
-  scale_y_log10(limits = c(0.1, 200)) +
+  scale_y_log10(limits = c(0.1, 160)) +
   scale_x_continuous(breaks = scales::pretty_breaks(n = 4)) +
   labs(
-    x = "Time",
+    x = "Time (days)",
     y = "Hazard Ratio (log scale)",
     color = "Model",
     fill = "Model"
@@ -416,18 +429,36 @@ time_cv_plot
 ```{r}
 #| label: combine-cv-plot
 
-design <- "
-124
-334
-554
+design1 <- "
+12
+33
+"
+panelA <- timeline_pA + timeline_pB + timeline_pC +
+  plot_annotation(tag_levels = "i") +
+  plot_layout(design = design1, guides = "collect") & 
+  theme(legend.position = 'bottom')
+
+panelA <- wrap_elements(full = panelA)
+
+panelC <- (time_hrs_plot / guide_area()) +
+  plot_layout(heights = c(1, 0.1), guides = "collect") &
+  theme(legend.position = "bottom")
+
+panelC <- wrap_elements(full = panelC)
+
+# Final figure: A (panelA), B (hrs), C (cv)
+design_final <- "
+13
+23
 "
 
-time_comb_plot <- timeline_pA + timeline_pB + timeline_pC + 
-  time_hrs_plot + time_cv_plot +
-  plot_layout(guides = "collect",
-              design = design,
-              heights = c(1, 1, 3)) &
-  theme(legend.position = 'bottom')
+time_comb_plot <- panelA + time_cv_plot + panelC +
+  plot_layout(design = design_final, 
+              heights = c(2, 3),
+              widths = c(1.5, 1)) +
+  plot_annotation(tag_levels = "A") &
+  theme(plot.tag.position = c(0.01, 0.99), # x, y in npc coords
+    plot.tag = element_text(margin = margin(r = 6, b = 6)))
 
 time_comb_plot
 
