--- a/R/manuscript-figs-tbls.qmd
+++ b/R/manuscript-figs-tbls.qmd
@@ -68,7 +68,7 @@ comparisons](images/suppfig-univar_loglik_plot.png)
 
 ## Figure 3:
 
-![Age as a covariate](images/age_combined-01.png)
+<!-- ![Age as a covariate](images/age_combined-01.png) -->
 
 ![Age as a covariate](images/fig3a-age_combined2.png)
 
@@ -78,17 +78,11 @@ comparisons](images/suppfig-univar_loglik_plot.png)
 
 ## Figure 4: Markov property
 
-<<<<<<< HEAD
-![Markov property](images/markov-property.png)
-=======
->>>>>>> 3788413df3b30f7031da107ca1f12a1e007217e0
-
-![Markov property alt](images/markov-property-structure-effects.png)
+![Markov property](images/fig4-markov-property-final.png)
 
 # Time homogeneity
 
 ## Figure 5: Time homogeneity
 
-![Time homogeneity](images/fig5_time_inhomog_hr_cv.png)
+![Time homogeneity](images/fig5-time_inhomog_hr_cv.png)
 
-## Long stay sensitivity analysis
